alignment fixed

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 768px) {
   .dashboard-content {
-    height: calc(100vh - 215px);
+    height: calc(100vh - 50px);
   }
   .dashboard-nav-item {
     display: grid;
